<resources>
    <string name="app_name">GitHubApp</string>
    <string name="searchbar_hint">Masukkan kata</string>
    <string name="name">Name</string>
    <string name="username">username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers_count">0 Followers</string>
    <string name="following_count">0 Following</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="data_not_avail">Data not available</string>

    <string name="menu_favorite">Favorites</string>
    <string name="menu_theme">Themes</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="favorite_user">Favorite User</string>
    <string name="data_not_available">Data Not Available</string>
</resources>